# lcdm_sim

./: .gitignore  README.md  lcdm_sim_1.ipynb  pyproject.toml
configs/: large_local.yaml  medium.yaml  smoke.yaml
docs/: README.md  reproducibility.md
notebooks/: 01_intro_parameters.ipynb  02_initial_conditions.ipynb  03_cic_forces_and_diagnostics.ipynb  04_full_pm_simulation.ipynb  README.md
src/lcdm_sim/: __init__.py  _fourier.py  _sampling.py  cic.py  cli.py  config.py  cosmology.py  diagnostics.py  fft_backend.py  forces.py  grf.py  integrators.py  io_hdf5.py  plotting_interactive.py  plotting_static.py  potential.py  simulation.py  spectra.py  types.py  validation.py  zeldovich.py
tests/: conftest.py  test_cic_phase2.py  test_cli.py  test_cli_validation_phase6.py  test_config.py  test_cosmology_phase2.py  test_diagnostics_phase4.py  test_fft_backend_phase2.py  test_forces_phase2.py  test_grf_phase2.py  test_integrators_phase3.py  test_io_hdf5_phase3.py  test_notebooks_phase5.py  test_package_import.py  test_plotting_interactive_phase4.py  test_plotting_static_phase4.py  test_simulation_phase3.py  test_spectra_phase2.py  test_validation_phase6.py  test_zeldovich_phase2.py
web_spec/: README.md
