[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcdm-sim"
version = "0.1.0a0"
description = "Modular LCDM particle-mesh simulation toolkit (WIP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lcdm-sim = "lcdm_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
